[gd_scene load_steps=2 format=3 uid="uid://d1g3aak3mxk5w"]

[ext_resource type="Script" path="res://addons/gtlib/examples/main/scripts/difference.gd" id="1_qxjl2"]

[node name="difference" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qxjl2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -267.5
offset_right = 275.0
offset_bottom = 267.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="date" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/date"]
layout_mode = 2
text = "date difference"
horizontal_alignment = 1

[node name="date1" type="LineEdit" parent="HBoxContainer/date"]
layout_mode = 2
placeholder_text = "date 1..."

[node name="date2" type="LineEdit" parent="HBoxContainer/date"]
layout_mode = 2
placeholder_text = "date 2..."

[node name="Button" type="Button" parent="HBoxContainer/date"]
layout_mode = 2
text = "retrieve"

[node name="result" type="RichTextLabel" parent="HBoxContainer/date"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
bbcode_enabled = true

[node name="timestamp" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/timestamp"]
layout_mode = 2
text = "time difference 24 hour"
horizontal_alignment = 1

[node name="time1" type="LineEdit" parent="HBoxContainer/timestamp"]
layout_mode = 2
placeholder_text = "timestamp 1..."

[node name="time2" type="LineEdit" parent="HBoxContainer/timestamp"]
layout_mode = 2
placeholder_text = "timestamp 2..."

[node name="Button" type="Button" parent="HBoxContainer/timestamp"]
layout_mode = 2
text = "retrieve"

[node name="result" type="RichTextLabel" parent="HBoxContainer/timestamp"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="ms" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/ms"]
layout_mode = 2
text = "time from ms"
horizontal_alignment = 1

[node name="ms" type="LineEdit" parent="HBoxContainer/ms"]
layout_mode = 2
placeholder_text = "ms..."

[node name="Button" type="Button" parent="HBoxContainer/ms"]
layout_mode = 2
text = "retrieve"

[node name="result" type="RichTextLabel" parent="HBoxContainer/ms"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
bbcode_enabled = true

[connection signal="pressed" from="HBoxContainer/date/Button" to="." method="date"]
[connection signal="pressed" from="HBoxContainer/timestamp/Button" to="." method="timestamp"]
[connection signal="pressed" from="HBoxContainer/ms/Button" to="." method="ms"]
